--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -963,6 +963,13 @@ MEDIA
 }
 
 @media(max-width: 1000px) {
+
+  .section:not(:has(.intro)) {
+    padding: 36px 0;
+  }
+
+
+
   .nav {
     display: none;
   }
